--- a/app/src/main/res/layout/activity_sales_condition_page.xml
+++ b/app/src/main/res/layout/activity_sales_condition_page.xml
@@ -30,38 +30,24 @@
         android:text="6,745,300원"
         android:textColor="#504E4E"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView46"
+        app:layout_constraintEnd_toEndOf="@+id/select_month"
         app:layout_constraintHorizontal_bias="0.565"
-        app:layout_constraintStart_toStartOf="@+id/textView46"
-        app:layout_constraintTop_toBottomOf="@+id/textView46" />
-
-    <TextView
-        android:id="@+id/TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:fontFamily="@font/nanumsquareneo_bold"
-        android:gravity="center"
-        android:text=" 매출 : "
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#504E4E"
-        app:layout_constraintBottom_toTopOf="@+id/btn_Sales_condition_search"
-        app:layout_constraintStart_toEndOf="@+id/select_date_sales"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+        app:layout_constraintStart_toStartOf="@+id/select_month"
+        app:layout_constraintTop_toBottomOf="@+id/select_month" />
 
     <TextView
         android:id="@+id/sales_search_result"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="26dp"
         android:fontFamily="@font/nanumsquareneo_bold"
         android:gravity="center"
-        android:text="520,400"
+        android:hint="조회하기 버튼을 눌러주세요"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#504E4E"
-        app:layout_constraintBottom_toBottomOf="@+id/TextView"
-        app:layout_constraintStart_toEndOf="@+id/TextView"
-        app:layout_constraintTop_toTopOf="@+id/TextView" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_Sales_condition"
+        app:layout_constraintEnd_toEndOf="@+id/select_date"
+        app:layout_constraintStart_toStartOf="@+id/select_date"
+        app:layout_constraintTop_toBottomOf="@+id/select_date" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -87,10 +73,11 @@
         app:layout_constraintTop_toBottomOf="@+id/month_sales" />
 
     <Button
-        android:id="@+id/btn_Sales_condition_search"
+        android:id="@+id/btn_Sales_condition"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="50dp"
         android:background="@drawable/button_style"
         android:fontFamily="@font/nanumsquareneo_bold"
@@ -105,12 +92,12 @@
         app:layout_constraintTop_toBottomOf="@+id/calendarView"></Button>
 
     <TextView
-        android:id="@+id/textView46"
+        android:id="@+id/select_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:fontFamily="@font/nanumsquareneo_bold"
-        android:text="2월 총 매출 "
+        android:text="3월 총 매출 "
         android:textColor="#504E4E"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/calendarView"
@@ -137,8 +124,8 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView45"
-        app:layout_constraintEnd_toEndOf="@+id/textView46"
-        app:layout_constraintStart_toStartOf="@+id/textView46"
+        app:layout_constraintEnd_toEndOf="@+id/select_month"
+        app:layout_constraintStart_toStartOf="@+id/select_month"
         app:layout_constraintTop_toTopOf="@+id/textView77" />
 
     <Button
@@ -194,17 +181,18 @@
         app:srcCompat="@drawable/kobblogo" />
 
     <TextView
-        android:id="@+id/select_date_sales"
+        android:id="@+id/select_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginBottom="20dp"
         android:fontFamily="@font/nanumsquareneo_bold"
         android:gravity="center"
-        android:text="0월0일"
+        android:text="날짜를 선택해주세요"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#504E4E"
-        app:layout_constraintBottom_toBottomOf="@+id/TextView"
-        app:layout_constraintStart_toStartOf="@+id/btn_Sales_condition_search"
-        app:layout_constraintTop_toTopOf="@+id/TextView" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_Sales_condition"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Sales_condition"
+        app:layout_constraintStart_toStartOf="@+id/btn_Sales_condition"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
