--- a/app/src/main/res/layout/inventory_list.xml
+++ b/app/src/main/res/layout/inventory_list.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/inventory_num"
+            android:id="@+id/menu_num"
             android:layout_width="28dp"
             android:layout_height="match_parent"
             android:background="@drawable/table_temp"
@@ -47,8 +47,8 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/menu_sort"
-            android:layout_width="44dp"
+            android:id="@+id/menu_category"
+            android:layout_width="44.2dp"
             android:layout_height="match_parent"
             android:background="@drawable/table_temp"
             android:fontFamily="@font/nanumsquareneo_variable"
@@ -58,7 +58,7 @@
 
         <EditText
             android:id="@+id/menu_status"
-            android:layout_width="67dp"
+            android:layout_width="67.8dp"
             android:layout_height="match_parent"
             android:background="@drawable/table_temp"
             android:fontFamily="@font/nanumsquareneo_variable"
